# cellularautomata

./: .gitignore  pyproject.toml
cellularautomata/: base.py  ca.py  cli.py  game.py  rules.py  rules2.py
