[tool.poetry]
name = "cellularautomata"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.scripts]
ca-cli = "cellularautomata.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
pygame = "^2.5.2"
opencv-python = "^4.9.0.80"
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
